--- a/src/frontend/containers/Lodging/styles.scss
+++ b/src/frontend/containers/Lodging/styles.scss
@@ -18,7 +18,7 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
-.Lodging__image, .Reservation__image {
+.Lodging__image {
   max-width: 500px;
   height: 250px;
   & img {
