--- a/src/frontend/sass/_global.scss
+++ b/src/frontend/sass/_global.scss
@@ -58,3 +58,18 @@ button {
   font-size: 1.2rem;
   background-color: $secondary-color;
 }
+
+.btn-outline-black {
+  padding: 14px;
+  color: $black;
+  font-size: 1.2rem;
+  width: fit-content;
+  transition: 0.2s ease;
+  background-color: $white;
+  border: 1px solid $black;
+  border-radius: $border-radius;
+  &:hover {
+    color: $white;
+    background-color: $black;
+  }
+}
