--- a/src/frontend/sass/_global.scss
+++ b/src/frontend/sass/_global.scss
@@ -59,6 +59,16 @@ button {
   background-color: $secondary-color;
 }
 
+.btn-black {
+  padding: 14px;
+  color: $white;
+  font-size: 1.2rem;
+  width: fit-content;
+  transition: 0.2s ease;
+  background-color: $black;
+  border-radius: $border-radius;
+}
+
 .btn-outline-black {
   padding: 14px;
   color: $black;
