--- a/src/frontend/components/ReservationCard/styles.scss
+++ b/src/frontend/components/ReservationCard/styles.scss
@@ -7,9 +7,10 @@
 }
 
 .Reservation__image {
-  display: flex;
+  padding: 0;
   width: 100%;
   height: 200px;
+  display: flex;
   & img {
     width: 100%;
     height: 200px;
